kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-hello-rest-ingress
  annotations:
    spec.ingressClassName: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - fastapi.mkcodergr.eu
      secretName: fastapi-tls
  rules:
    - host: fastapi.mkcodergr.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-hello-rest-loadbalancer
                port:
                  number: 4590
